# DISTILL

./: .gitignore  README.md  analyze_zero_reduction.py  check_loc.py  debug_decompress.py  debug_missing.py  generate_metrics.py  pyproject.toml  verify_distill.py
distill/: __init__.py  cli.py  compress.py  config.py  decompress.py  exceptions.py  io.py  utils.py
distill/core/: __init__.py  equivalence.py  huffman.py  schema.py  tokenizer.py
scripts/: audit_functional.py  verify_final.py  verify_release.py
tests/: __init__.py  conftest.py  test_compress.py  test_core.py  test_edge_cases.py  test_examples.py  test_hardening.py  test_integration.py  test_performance.py  test_roundtrip.py
tests/fixtures/: incident.json  large.json  logs.json  nested.json  patterns.json  random.json  simple.json
