[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distill-json"
version = "0.2.0"
description = "Data Intelligent Structure Token-efficient Interchange for LLMs - Compress JSON for LLM consumption"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "KR"}
]
keywords = [
    "json",
    "compression",
    "llm",
    "token",
    "optimization",
    "ai",
    "machine-learning",
    "data-compression"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.5.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
all = [
    "tiktoken>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/kr/distill"
Documentation = "https://github.com/kr/distill#readme"
Repository = "https://github.com/kr/distill"
Issues = "https://github.com/kr/distill/issues"

[project.scripts]
distill = "distill.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["distill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
